<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnr_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_menu" />
    <include layout="@layout/facebook_ad_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/educationTitle" />

    <CheckBox
        android:id="@+id/isYourCurrentEducationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mevcut Eğitim" />

    <EditText
        android:id="@+id/schoolName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/schoolName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startDateE"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@android:color/black"
            android:text="@string/startDate"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/endDateE"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight=".5"
            android:background="@android:color/black"
            android:text="@string/endDate"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <EditText
        android:id="@+id/degreeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/degree" />


</LinearLayout>